--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,8 +16,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;500;600&family=Noto+Sans&family=Poppinswght@400;500;600&family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500&family=Noto+Sans:ital,wght@0,400;0,500;0,600;1,400;1,700&family=Poppins:wght@500&family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
   <link href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
